manifests/network-policies/allow-external-to-keycloak.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: allow-external-to-keycloak
  namespace: demo
spec:
  endpointSelector:
    matchLabels:
      app: keycloak
  ingress:
    - fromEntities:
        - cluster
        - world
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
