manifests/network-policies/allow-external-to-nginx.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: allow-external-to-nginx
  namespace: demo
spec:
  endpointSelector:
    matchLabels:
      app: nginx-web
  ingress:
    - fromEntities:
        - world
        - cluster
      toPorts:
        - ports:
            - port: "80"
              protocol: TCP
